use cache from main

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -206,6 +206,7 @@ jobs:
       - name: Build amd k3d-base target
         run: |-
           earthly --strict --push --no-output \
+          	--cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:main-amd \
           	--cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:main-k3d-amd \
           	--remote-cache ghcr.io/${GITHUB_REPOSITORY}-cache:${BRANCH}-k3d-amd \
           	+build-amd-k3d-base
@@ -256,6 +257,7 @@ jobs:
       - name: Build arm k3d-base target
         run: |-
           earthly --strict --push --no-output \
+          	--cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:main-arm \
           	--cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:main-k3d-arm \
           	--remote-cache ghcr.io/${GITHUB_REPOSITORY}-cache:${BRANCH}-k3d-arm \
           	+build-arm-k3d-base
@@ -309,6 +311,8 @@ jobs:
       - name: Publish images
         run: |-
           earthly --strict --push --no-output \
+          	--cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:main-amd \
+          	--cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:main-arm \
           	--cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:main-k3d-amd \
           	--cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:main-k3d-arm \
           	--cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:${BRANCH}-k3d-amd \
