--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,27 +16,6 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - name: Put back the git branch into git (Earthly uses it for tagging)
-        run: |-
-          branch=""
-          if [ -n "$GITHUB_HEAD_REF" ]; then
-            branch="$GITHUB_HEAD_REF"
-            echo "BRANCH=PR-${{github.event.pull_request.number}}" >> $GITHUB_ENV
-            echo "TAG=PR-${{github.event.pull_request.number}}" >> $GITHUB_ENV
-          else
-            branch="${GITHUB_REF_NAME}"
-            echo "BRANCH=${branch}" >> $GITHUB_ENV
-            echo "TAG=latest" >> $GITHUB_ENV
-          fi
-
-          git checkout -b "$branch" || true
-
-          if [ "$GITHUB_REF_TYPE" = "tag" ]; then
-            echo "BRANCH=${GITHUB_REF_NAME}" >> $GITHUB_ENV
-            echo "TAG=${GITHUB_REF_NAME}" >> $GITHUB_ENV
-          fi
-
-          git config --unset http.https://github.com/.extraheader
       - name: Login to Packages Container registry
         uses: docker/login-action@v1
         with:
@@ -44,7 +23,7 @@ jobs:
           username: not-used
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Download latest earthly
-        run: sudo /bin/sh -c 'wget -q https://github.com/earthly/earthly/releases/download/v0.6.23/earthly-linux-amd64 -O /usr/local/bin/earthly && chmod +x /usr/local/bin/earthly'
+        run: sudo /bin/sh -c 'wget -q https://github.com/earthly/earthly/releases/download/v0.6.28/earthly-linux-amd64 -O /usr/local/bin/earthly && chmod +x /usr/local/bin/earthly'
       - name: Set up QEMU
         id: qemu
         uses: docker/setup-qemu-action@v1
@@ -66,27 +45,6 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - name: Put back the git branch into git (Earthly uses it for tagging)
-        run: |-
-          branch=""
-          if [ -n "$GITHUB_HEAD_REF" ]; then
-            branch="$GITHUB_HEAD_REF"
-            echo "BRANCH=PR-${{github.event.pull_request.number}}" >> $GITHUB_ENV
-            echo "TAG=PR-${{github.event.pull_request.number}}" >> $GITHUB_ENV
-          else
-            branch="${GITHUB_REF_NAME}"
-            echo "BRANCH=${branch}" >> $GITHUB_ENV
-            echo "TAG=latest" >> $GITHUB_ENV
-          fi
-
-          git checkout -b "$branch" || true
-
-          if [ "$GITHUB_REF_TYPE" = "tag" ]; then
-            echo "BRANCH=${GITHUB_REF_NAME}" >> $GITHUB_ENV
-            echo "TAG=${GITHUB_REF_NAME}" >> $GITHUB_ENV
-          fi
-
-          git config --unset http.https://github.com/.extraheader
       - name: Login to Packages Container registry
         uses: docker/login-action@v1
         with:
@@ -94,7 +52,7 @@ jobs:
           username: not-used
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Download latest earthly
-        run: sudo /bin/sh -c 'wget -q https://github.com/earthly/earthly/releases/download/v0.6.23/earthly-linux-amd64 -O /usr/local/bin/earthly && chmod +x /usr/local/bin/earthly'
+        run: sudo /bin/sh -c 'wget -q https://github.com/earthly/earthly/releases/download/v0.6.28/earthly-linux-amd64 -O /usr/local/bin/earthly && chmod +x /usr/local/bin/earthly'
       - name: Set up QEMU
         id: qemu
         uses: docker/setup-qemu-action@v1
@@ -116,49 +74,16 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - name: Put back the git branch into git (Earthly uses it for tagging)
-        run: |-
-          branch=""
-          if [ -n "$GITHUB_HEAD_REF" ]; then
-            branch="$GITHUB_HEAD_REF"
-            echo "BRANCH=PR-${{github.event.pull_request.number}}" >> $GITHUB_ENV
-            echo "TAG=PR-${{github.event.pull_request.number}}" >> $GITHUB_ENV
-          else
-            branch="${GITHUB_REF_NAME}"
-            echo "BRANCH=${branch}" >> $GITHUB_ENV
-            echo "TAG=latest" >> $GITHUB_ENV
-          fi
-
-          git checkout -b "$branch" || true
-
-          if [ "$GITHUB_REF_TYPE" = "tag" ]; then
-            echo "BRANCH=${GITHUB_REF_NAME}" >> $GITHUB_ENV
-            echo "TAG=${GITHUB_REF_NAME}" >> $GITHUB_ENV
-          fi
-
-          git config --unset http.https://github.com/.extraheader
       - name: Login to Packages Container registry
         uses: docker/login-action@v1
         with:
           registry: ghcr.io
           username: not-used
           password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Download latest earthly
-        run: sudo /bin/sh -c 'wget -q https://github.com/earthly/earthly/releases/download/v0.6.23/earthly-linux-amd64 -O /usr/local/bin/earthly && chmod +x /usr/local/bin/earthly'
-      - name: Set up QEMU
-        id: qemu
-        uses: docker/setup-qemu-action@v1
-        with:
-          image: tonistiigi/binfmt:latest
-          platforms: all
       - name: Publish images
         run: |-
-          earthly --strict --push --no-output \
-          	--cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:main-amd \
-          	--cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:main-arm \
-          	--cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:main-all \
-          	--remote-cache ghcr.io/${GITHUB_REPOSITORY}-cache:${BRANCH}-all \
-          	+images --repo=ghcr.io/ --tag=${TAG}
+          docker manifest create ghcr.io/${GITHUB_REPOSITORY}-cache:${BRANCH}-amd ghcr.io/${GITHUB_REPOSITORY}-cache:${BRANCH}-arm
+          docker manifest push ghcr.io/${GITHUB_REPOSITORY}:${TAG}
   build_k3d_amd:
     runs-on: ubuntu-latest
     env:
@@ -168,27 +93,6 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - name: Put back the git branch into git (Earthly uses it for tagging)
-        run: |-
-          branch=""
-          if [ -n "$GITHUB_HEAD_REF" ]; then
-            branch="$GITHUB_HEAD_REF"
-            echo "BRANCH=PR-${{github.event.pull_request.number}}" >> $GITHUB_ENV
-            echo "TAG=PR-${{github.event.pull_request.number}}" >> $GITHUB_ENV
-          else
-            branch="${GITHUB_REF_NAME}"
-            echo "BRANCH=${branch}" >> $GITHUB_ENV
-            echo "TAG=latest" >> $GITHUB_ENV
-          fi
-
-          git checkout -b "$branch" || true
-
-          if [ "$GITHUB_REF_TYPE" = "tag" ]; then
-            echo "BRANCH=${GITHUB_REF_NAME}" >> $GITHUB_ENV
-            echo "TAG=${GITHUB_REF_NAME}" >> $GITHUB_ENV
-          fi
-
-          git config --unset http.https://github.com/.extraheader
       - name: Login to Packages Container registry
         uses: docker/login-action@v1
         with:
@@ -196,7 +100,7 @@ jobs:
           username: not-used
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Download latest earthly
-        run: sudo /bin/sh -c 'wget -q https://github.com/earthly/earthly/releases/download/v0.6.23/earthly-linux-amd64 -O /usr/local/bin/earthly && chmod +x /usr/local/bin/earthly'
+        run: sudo /bin/sh -c 'wget -q https://github.com/earthly/earthly/releases/download/v0.6.28/earthly-linux-amd64 -O /usr/local/bin/earthly && chmod +x /usr/local/bin/earthly'
       - name: Set up QEMU
         id: qemu
         uses: docker/setup-qemu-action@v1
@@ -219,27 +123,6 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - name: Put back the git branch into git (Earthly uses it for tagging)
-        run: |-
-          branch=""
-          if [ -n "$GITHUB_HEAD_REF" ]; then
-            branch="$GITHUB_HEAD_REF"
-            echo "BRANCH=PR-${{github.event.pull_request.number}}" >> $GITHUB_ENV
-            echo "TAG=PR-${{github.event.pull_request.number}}" >> $GITHUB_ENV
-          else
-            branch="${GITHUB_REF_NAME}"
-            echo "BRANCH=${branch}" >> $GITHUB_ENV
-            echo "TAG=latest" >> $GITHUB_ENV
-          fi
-
-          git checkout -b "$branch" || true
-
-          if [ "$GITHUB_REF_TYPE" = "tag" ]; then
-            echo "BRANCH=${GITHUB_REF_NAME}" >> $GITHUB_ENV
-            echo "TAG=${GITHUB_REF_NAME}" >> $GITHUB_ENV
-          fi
-
-          git config --unset http.https://github.com/.extraheader
       - name: Login to Packages Container registry
         uses: docker/login-action@v1
         with:
@@ -247,7 +130,7 @@ jobs:
           username: not-used
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Download latest earthly
-        run: sudo /bin/sh -c 'wget -q https://github.com/earthly/earthly/releases/download/v0.6.23/earthly-linux-amd64 -O /usr/local/bin/earthly && chmod +x /usr/local/bin/earthly'
+        run: sudo /bin/sh -c 'wget -q https://github.com/earthly/earthly/releases/download/v0.6.28/earthly-linux-amd64 -O /usr/local/bin/earthly && chmod +x /usr/local/bin/earthly'
       - name: Set up QEMU
         id: qemu
         uses: docker/setup-qemu-action@v1
@@ -273,48 +156,13 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - name: Put back the git branch into git (Earthly uses it for tagging)
-        run: |-
-          branch=""
-          if [ -n "$GITHUB_HEAD_REF" ]; then
-            branch="$GITHUB_HEAD_REF"
-            echo "BRANCH=PR-${{github.event.pull_request.number}}" >> $GITHUB_ENV
-            echo "TAG=PR-${{github.event.pull_request.number}}" >> $GITHUB_ENV
-          else
-            branch="${GITHUB_REF_NAME}"
-            echo "BRANCH=${branch}" >> $GITHUB_ENV
-            echo "TAG=latest" >> $GITHUB_ENV
-          fi
-
-          git checkout -b "$branch" || true
-
-          if [ "$GITHUB_REF_TYPE" = "tag" ]; then
-            echo "BRANCH=${GITHUB_REF_NAME}" >> $GITHUB_ENV
-            echo "TAG=${GITHUB_REF_NAME}" >> $GITHUB_ENV
-          fi
-
-          git config --unset http.https://github.com/.extraheader
       - name: Login to Packages Container registry
         uses: docker/login-action@v1
         with:
           registry: ghcr.io
           username: not-used
           password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Download latest earthly
-        run: sudo /bin/sh -c 'wget -q https://github.com/earthly/earthly/releases/download/v0.6.23/earthly-linux-amd64 -O /usr/local/bin/earthly && chmod +x /usr/local/bin/earthly'
-      - name: Set up QEMU
-        id: qemu
-        uses: docker/setup-qemu-action@v1
-        with:
-          image: tonistiigi/binfmt:latest
-          platforms: all
       - name: Publish images
         run: |-
-          earthly --strict --push --no-output \
-          	--cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:main-amd \
-          	--cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:main-arm \
-          	--cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:main-k3d-amd \
-          	--cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:main-k3d-arm \
-          	--cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:${BRANCH}-k3d-amd \
-          	--cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:${BRANCH}-k3d-arm \
-          	+imagesK3DBase --repo=ghcr.io/ --tag=${TAG}
+          docker manifest create ghcr.io/${GITHUB_REPOSITORY}-cache:${BRANCH}-k3d-amd ghcr.io/${GITHUB_REPOSITORY}-cache:${BRANCH}-k3d-arm
+          docker manifest push ghcr.io/${GITHUB_REPOSITORY}:${TAG}
