--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,12 +16,6 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - name: Login to Packages Container registry
-        uses: docker/login-action@v1
-        with:
-          registry: ghcr.io
-          username: not-used
-          password: ${{ secrets.GITHUB_TOKEN }}
       - name: Put back the git branch into git (Earthly uses it for tagging)
         run: |-
           branch=""
@@ -43,6 +37,12 @@ jobs:
           fi
 
           git config --unset http.https://github.com/.extraheader
+      - name: Login to Packages Container registry
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: not-used
+          password: ${{ secrets.GITHUB_TOKEN }}
       - name: Download latest earthly
         run: sudo /bin/sh -c 'wget -q https://github.com/earthly/earthly/releases/download/v0.6.28/earthly-linux-amd64 -O /usr/local/bin/earthly && chmod +x /usr/local/bin/earthly'
       - name: Set up QEMU
@@ -66,12 +66,6 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - name: Login to Packages Container registry
-        uses: docker/login-action@v1
-        with:
-          registry: ghcr.io
-          username: not-used
-          password: ${{ secrets.GITHUB_TOKEN }}
       - name: Put back the git branch into git (Earthly uses it for tagging)
         run: |-
           branch=""
@@ -93,6 +87,12 @@ jobs:
           fi
 
           git config --unset http.https://github.com/.extraheader
+      - name: Login to Packages Container registry
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: not-used
+          password: ${{ secrets.GITHUB_TOKEN }}
       - name: Download latest earthly
         run: sudo /bin/sh -c 'wget -q https://github.com/earthly/earthly/releases/download/v0.6.28/earthly-linux-amd64 -O /usr/local/bin/earthly && chmod +x /usr/local/bin/earthly'
       - name: Set up QEMU
@@ -116,31 +116,6 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - name: Login to Packages Container registry
-        uses: docker/login-action@v1
-        with:
-          registry: ghcr.io
-          username: not-used
-          password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Publish images
-        run: |-
-          docker manifest create ghcr.io/${GITHUB_REPOSITORY}-cache:${BRANCH}-amd ghcr.io/${GITHUB_REPOSITORY}-cache:${BRANCH}-arm
-          docker manifest push ghcr.io/${GITHUB_REPOSITORY}:${TAG}
-  build_k3d_amd:
-    runs-on: ubuntu-latest
-    env:
-      FORCE_COLOR: 1
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-      - name: Login to Packages Container registry
-        uses: docker/login-action@v1
-        with:
-          registry: ghcr.io
-          username: not-used
-          password: ${{ secrets.GITHUB_TOKEN }}
       - name: Put back the git branch into git (Earthly uses it for tagging)
         run: |-
           branch=""
@@ -162,6 +137,52 @@ jobs:
           fi
 
           git config --unset http.https://github.com/.extraheader
+      - name: Login to Packages Container registry
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: not-used
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Publish images
+        run: |-
+          docker manifest create ghcr.io/${GITHUB_REPOSITORY}-cache:${BRANCH}-amd ghcr.io/${GITHUB_REPOSITORY}-cache:${BRANCH}-arm
+          docker manifest push ghcr.io/${GITHUB_REPOSITORY}:${TAG}
+  build_k3d_amd:
+    runs-on: ubuntu-latest
+    env:
+      FORCE_COLOR: 1
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      - name: Put back the git branch into git (Earthly uses it for tagging)
+        run: |-
+          branch=""
+          if [ -n "$GITHUB_HEAD_REF" ]; then
+            branch="$GITHUB_HEAD_REF"
+            echo "BRANCH=PR-${{github.event.pull_request.number}}" >> $GITHUB_ENV
+            echo "TAG=PR-${{github.event.pull_request.number}}" >> $GITHUB_ENV
+          else
+            branch="${GITHUB_REF_NAME}"
+            echo "BRANCH=${branch}" >> $GITHUB_ENV
+            echo "TAG=latest" >> $GITHUB_ENV
+          fi
+
+          git checkout -b "$branch" || true
+
+          if [ "$GITHUB_REF_TYPE" = "tag" ]; then
+            echo "BRANCH=${GITHUB_REF_NAME}" >> $GITHUB_ENV
+            echo "TAG=${GITHUB_REF_NAME}" >> $GITHUB_ENV
+          fi
+
+          git config --unset http.https://github.com/.extraheader
+      - name: Login to Packages Container registry
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: not-used
+          password: ${{ secrets.GITHUB_TOKEN }}
       - name: Download latest earthly
         run: sudo /bin/sh -c 'wget -q https://github.com/earthly/earthly/releases/download/v0.6.28/earthly-linux-amd64 -O /usr/local/bin/earthly && chmod +x /usr/local/bin/earthly'
       - name: Set up QEMU
@@ -186,12 +207,6 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - name: Login to Packages Container registry
-        uses: docker/login-action@v1
-        with:
-          registry: ghcr.io
-          username: not-used
-          password: ${{ secrets.GITHUB_TOKEN }}
       - name: Put back the git branch into git (Earthly uses it for tagging)
         run: |-
           branch=""
@@ -213,6 +228,12 @@ jobs:
           fi
 
           git config --unset http.https://github.com/.extraheader
+      - name: Login to Packages Container registry
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: not-used
+          password: ${{ secrets.GITHUB_TOKEN }}
       - name: Download latest earthly
         run: sudo /bin/sh -c 'wget -q https://github.com/earthly/earthly/releases/download/v0.6.28/earthly-linux-amd64 -O /usr/local/bin/earthly && chmod +x /usr/local/bin/earthly'
       - name: Set up QEMU
@@ -240,6 +261,27 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
+      - name: Put back the git branch into git (Earthly uses it for tagging)
+        run: |-
+          branch=""
+          if [ -n "$GITHUB_HEAD_REF" ]; then
+            branch="$GITHUB_HEAD_REF"
+            echo "BRANCH=PR-${{github.event.pull_request.number}}" >> $GITHUB_ENV
+            echo "TAG=PR-${{github.event.pull_request.number}}" >> $GITHUB_ENV
+          else
+            branch="${GITHUB_REF_NAME}"
+            echo "BRANCH=${branch}" >> $GITHUB_ENV
+            echo "TAG=latest" >> $GITHUB_ENV
+          fi
+
+          git checkout -b "$branch" || true
+
+          if [ "$GITHUB_REF_TYPE" = "tag" ]; then
+            echo "BRANCH=${GITHUB_REF_NAME}" >> $GITHUB_ENV
+            echo "TAG=${GITHUB_REF_NAME}" >> $GITHUB_ENV
+          fi
+
+          git config --unset http.https://github.com/.extraheader
       - name: Login to Packages Container registry
         uses: docker/login-action@v1
         with:
