--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -191,13 +191,13 @@ jobs:
         with:
           image: tonistiigi/binfmt:latest
           platforms: all
-      - name: Build amd k3d-base target
+      - name: Build amd k3d target
         run: |-
           earthly --strict --push --no-output \
           	--cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:main-amd \
           	--cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:main-k3d-amd \
           	--remote-cache ghcr.io/${GITHUB_REPOSITORY}-cache:${BRANCH}-k3d-amd \
-          	+build-amd-k3d-base
+          	+build-amd-k3d
   build_k3d_arm:
     runs-on: ubuntu-latest
     env:
@@ -242,13 +242,13 @@ jobs:
         with:
           image: tonistiigi/binfmt:latest
           platforms: all
-      - name: Build arm k3d-base target
+      - name: Build arm k3d target
         run: |-
           earthly --strict --push --no-output \
           	--cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:main-arm \
           	--cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:main-k3d-arm \
           	--remote-cache ghcr.io/${GITHUB_REPOSITORY}-cache:${BRANCH}-k3d-arm \
-          	+build-arm-k3d-base
+          	+build-arm-k3d
   publish_k3d:
     runs-on: ubuntu-latest
     env:
