--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -7,7 +7,7 @@ name: CI
       - v**
   pull_request: {}
 jobs:
-  build_amd:
+  build_amd_dev:
     runs-on: ubuntu-latest
     env:
       FORCE_COLOR: 1
@@ -54,10 +54,10 @@ jobs:
       - name: Build amd target
         run: |-
           earthly --strict --push --no-output \
-          	--cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:main-amd \
-          	--remote-cache ghcr.io/${GITHUB_REPOSITORY}-cache:${BRANCH}-amd \
-          	+build-amd
-  build_arm:
+          	--cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:main-amd-dev \
+          	--remote-cache ghcr.io/${GITHUB_REPOSITORY}-cache:${BRANCH}-amd-dev \
+          	+build-amd-dev
+  build_arm_dev:
     runs-on: ubuntu-latest
     env:
       FORCE_COLOR: 1
@@ -104,16 +104,16 @@ jobs:
       - name: Build arm target
         run: |-
           earthly --strict --push --no-output \
-          	--cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:main-arm \
-          	--remote-cache ghcr.io/${GITHUB_REPOSITORY}-cache:${BRANCH}-arm \
-          	+build-arm
-  publish:
+          	--cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:main-arm-dev \
+          	--remote-cache ghcr.io/${GITHUB_REPOSITORY}-cache:${BRANCH}-arm-dev \
+          	+build-arm-dev
+  publish_dev:
     runs-on: ubuntu-latest
     env:
       FORCE_COLOR: 1
     needs:
-      - build_amd
-      - build_arm
+      - build_amd_dev
+      - build_arm_dev
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -148,9 +148,11 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Publish images
         run: |-
-          docker manifest inspect ghcr.io/${GITHUB_REPOSITORY}-cache:${BRANCH}-amd
-          docker manifest inspect ghcr.io/${GITHUB_REPOSITORY}-cache:${BRANCH}-arm
-  build_k3d_amd:
+          earthly --strict --push --no-output \
+          	--cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:main-amd-dev \
+          	--cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:main-arm-dev \
+          	+publish-dev --image ghcr.io/${GITHUB_REPOSITORY}:${TAG}-dev
+  build_amd_k3d:
     runs-on: ubuntu-latest
     env:
       FORCE_COLOR: 1
@@ -197,11 +199,11 @@ jobs:
       - name: Build amd k3d target
         run: |-
           earthly --strict --push --no-output \
-          	--cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:main-amd \
-          	--cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:main-k3d-amd \
-          	--remote-cache ghcr.io/${GITHUB_REPOSITORY}-cache:${BRANCH}-k3d-amd \
+          	--cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:main-amd-dev \
+          	--cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:main-amd-k3d \
+          	--remote-cache ghcr.io/${GITHUB_REPOSITORY}-cache:${BRANCH}-amd-k3d \
           	+build-amd-k3d
-  build_k3d_arm:
+  build_arm_k3d:
     runs-on: ubuntu-latest
     env:
       FORCE_COLOR: 1
@@ -248,17 +250,17 @@ jobs:
       - name: Build arm k3d target
         run: |-
           earthly --strict --push --no-output \
-          	--cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:main-arm \
-          	--cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:main-k3d-arm \
-          	--remote-cache ghcr.io/${GITHUB_REPOSITORY}-cache:${BRANCH}-k3d-arm \
+          	--cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:main-arm-dev \
+          	--cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:main-arm-k3d \
+          	--remote-cache ghcr.io/${GITHUB_REPOSITORY}-cache:${BRANCH}-arm-k3d \
           	+build-arm-k3d
   publish_k3d:
     runs-on: ubuntu-latest
     env:
       FORCE_COLOR: 1
     needs:
-      - build_k3d_amd
-      - build_k3d_arm
+      - build_amd_k3d
+      - build_arm_k3d
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -293,5 +295,9 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Publish images
         run: |-
-          docker manifest create ghcr.io/${GITHUB_REPOSITORY}:${TAG} ghcr.io/${GITHUB_REPOSITORY}-cache:${BRANCH}-k3d-amd ghcr.io/${GITHUB_REPOSITORY}-cache:${BRANCH}-k3d-arm
-          docker manifest push ghcr.io/${GITHUB_REPOSITORY}:${TAG}
+          earthly --strict --push --no-output \
+          	--cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:main-amd-dev \
+          	--cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:main-amd-k3d \
+          	--cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:main-arm-dev \
+          	--cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:main-arm-k3d \
+          	+publish-k3d --image ghcr.io/${GITHUB_REPOSITORY}:${TAG}-k3d
